2006-02-11  Rodney Dawes  <dobey@novell.com>

	* configure.in: Up version to 2.15.0 for HEAD

2006-02-10  Jakub Steiner <jimmac@ximian.com>

	* im-yahoo:
	* im-nov: based on work by Andreas Nilsson

2006-02-10  Jakub Steiner <jimmac@ximian.com>

	* im-*: all proper sizes. bug #330394

2006-02-10  Jakub Steiner <jimmac@ximian.com>

	* web-browser: provide all resolutions, fixes bug #330092

2006-02-10  Jakub Steiner <jimmac@ximian.com>

	* 48x48/apps/gnome-shutdown.png: remove old icon (have scalable)

2006-02-09  Jakub Steiner <jimmac@ximian.com>

	* text-html: make Rodney happy ;)

2006-02-09  Jakub Steiner <jimmac@ximian.com>

	* 16x16/apps/gnome-shutdown.png:
	* 22x22/apps/gnome-shutdown.png:
	* 24x24/apps/gnome-shutdown.png:
	* scalable/apps/gnome-shutdown.svg: fixes bug #330520

2006-02-09  Jakub Steiner <jimmac@ximian.com>

	* 24x24/devices: can't do 24 from 22 as it would mean depending on
		imagemagick. doing manually for now.

2006-02-08  Jakub Steiner <jimmac@ximian.com>

	* drive-cdrom:
	* drive-harddisk:
	* drive-removable-media:
	* media-cdrom: new device icons
	
2006-02-07  Jakub Steiner <jimmac@ximian.com>

	* folders: emblem anchors for scalables. Remove 48x48s

2006-02-07  Jakub Steiner <jimmac@ximian.com>

	* index.theme.in: add animations context

2006-02-06  Rodney Dawes  <dobey@novell.com>

	* NEWS:
	* configure.in: Update for 2.13.7 release

2006-02-06  Rodney Dawes  <dobey@novell.com>

	* configure.in:
	* 24x24/Makefile.am:
	* 48x48/Makefile.am:
	* 24x24/animations/Makefile.am:
	* 48x48/animations/Makefile.am:
	Update for the new 24px and 48px size animation sequences

2006-02-06  Jakub Steiner <jimmac@ximian.com>

	* process-working: use a gradinet to better work on grey gtk
		themes. add 24x24 and 48x48 versions.
	
2006-02-06  Rodney Dawes  <dobey@novell.com>

	* configure.in:
	* 16x16/Makefile.am:
	* 16x16/animations/Makefile.am:
	Add all the Makefile magic to install the animations
