@@ -9,7 +9,8 @@ icons_DATA =			\
 	folder-drag-accept.svg	\
 	folder-visiting.icon	\
 	folder-visiting.svg	\
-	user-trash-full.svg
+	user-trash-full.svg	\
+	weather-clear.svg
 
 EXTRA_DIST =		\
 	$(icons_DATA)
