@@ -1,3 +1,8 @@
+2006-02-26  Rodney Dawes  <dobey@novell.com>
+
+	* */status/Makefile.am: Update for weather-clear at missing sizes
+	* */status/weather-clear.*: Update style for weather-clear icon
+
 2006-02-11  Rodney Dawes  <dobey@novell.com>
 
 	* configure.in: Up version to 2.15.0 for HEAD
